<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detalles">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="299dp"
        android:layout_height="227dp"
        android:contentDescription="@string/userimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/detnombre"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/rochester"
        android:text="@string/detallenombre"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/detmatricula"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/rochester"
        android:text="@string/detallematricula"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detnombre" />

    <TextView
        android:id="@+id/detpromedio"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/rochester"
        android:text="@string/detallepromedio"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detmatricula"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/detcorreo"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/rochester"
        android:text="@string/detcorreo"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dlblpromedio" />

    <TextView
        android:id="@+id/dlblnombre"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/detmatricula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detnombre"
        app:layout_constraintVertical_bias="0.535" />

    <TextView
        android:id="@+id/dlblmatricula"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="18dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/detpromedio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detmatricula"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dlblpromedio"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="40dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detpromedio"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dlblcorreo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/dlblcorreo"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detcorreo"
        app:layout_constraintVertical_bias="0.342" />

</androidx.constraintlayout.widget.ConstraintLayout>